<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.ashishhooda.aaa.MainActivity"
        tools:showIn="@layout/activity_main"
        android:background="#0900ff">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Title"
                android:id="@+id/textView"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:height="30sp"
                android:background="#ffffff"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText0"
                android:layout_row="1"
                android:layout_column="0"
                android:hint="team name"
                android:background="#00f9ff"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint1A"
                android:background="#00f9ff"
                android:layout_margin="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/textView2"
                android:layout_row="3"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText1"
                android:layout_row="4"
                android:layout_column="0"
                android:hint="@string/entry1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:background="#00f9ff"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/textView3"
                android:layout_row="5"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText2"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#00f9ff"
                android:hint="@string/hint2A"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/textView4"
                android:layout_row="7"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText3"
                android:layout_row="8"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint2b"
                android:background="#00f9ff"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/textView5"
                android:layout_row="9"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText4"
                android:layout_row="10"
                android:layout_column="0"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#00f9ff"
                android:hint="@string/hint3A"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/textView6"
                android:layout_row="11"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText5"
                android:layout_row="12"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/hint3b"
                android:background="#00f9ff"
                android:layout_margin="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/button"
                android:layout_row="13"
                android:layout_column="0"
                android:background="#27f907"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:onClick="RegisterUser"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/textView7"
                android:layout_row="14"
                android:layout_column="0" />

        </GridLayout>

    </RelativeLayout>
</ScrollView>